# Oxidize

./: .gitignore  Cargo.toml  printer.toml  test.gcode
apps/gui_studio/: Cargo.toml
apps/gui_studio/src/: cli.rs  config_loader.rs  main.rs
crates/core_types/: Cargo.toml
crates/core_types/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/gcode_parser/: Cargo.toml
crates/gcode_parser/src/: lib.rs
crates/kinematics/: Cargo.toml
crates/kinematics/src/: config.rs  factory.rs  lib.rs
crates/kinematics/src/models/: cartesian.rs  corexy.rs  mod.rs  trunnion_corexy.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: components.rs  lib.rs  resources.rs
crates/simulator/src/plugins/: kinematics_sync.rs  mod.rs  scene.rs  ui.rs
